src/objects/workday_jobs__x.object
<CustomObject>
    <description>workday.jobs</description>
    <externalDataSource>WorkDay_HRIS</externalDataSource>
    <externalName>workday.jobs</externalName>
    <fields>
        <fullName>compensation_frequency__c</fullName>
        <description>compensation_frequency</description>
        <externalDeveloperName>compensation_frequency</externalDeveloperName>
        <label>compensation_frequency</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currency__c</fullName>
        <description>currency</description>
        <externalDeveloperName>currency</externalDeveloperName>
        <label>currency</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employee_type__c</fullName>
        <description>employee_type</description>
        <externalDeveloperName>employee_type</externalDeveloperName>
        <label>employee_type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grade_level__c</fullName>
        <description>grade_level</description>
        <externalDeveloperName>grade_level</externalDeveloperName>
        <label>grade_level</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>job_category__c</fullName>
        <description>job_category</description>
        <externalDeveloperName>job_category</externalDeveloperName>
        <label>job_category</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>job_code__c</fullName>
        <description>job_code</description>
        <externalDeveloperName>job_code</externalDeveloperName>
        <label>job_code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>job_description__c</fullName>
        <description>job_description</description>
        <externalDeveloperName>job_description</externalDeveloperName>
        <label>job_description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>job_family__c</fullName>
        <description>job_family</description>
        <externalDeveloperName>job_family</externalDeveloperName>
        <label>job_family</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>job_status__c</fullName>
        <description>job_status</description>
        <externalDeveloperName>job_status</externalDeveloperName>
        <label>job_status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>job_title__c</fullName>
        <description>job_title</description>
        <externalDeveloperName>job_title</externalDeveloperName>
        <label>job_title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maximum_salary__c</fullName>
        <description>maximum_salary</description>
        <externalDeveloperName>maximum_salary</externalDeveloperName>
        <label>maximum_salary</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mid_point_salary__c</fullName>
        <description>mid_point_salary</description>
        <externalDeveloperName>mid_point_salary</externalDeveloperName>
        <label>mid_point_salary</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>minimum_salary__c</fullName>
        <description>minimum_salary</description>
        <externalDeveloperName>minimum_salary</externalDeveloperName>
        <label>minimum_salary</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>standard_hours__c</fullName>
        <description>standard_hours</description>
        <externalDeveloperName>standard_hours</externalDeveloperName>
        <label>standard_hours</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>standard_work_period__c</fullName>
        <description>standard_work_period</description>
        <externalDeveloperName>standard_work_period</externalDeveloperName>
        <label>standard_work_period</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>workday.jobs</label>
    <pluralLabel>workday.jobs</pluralLabel>
</CustomObject>